crates/ars-core/tests/ui/component_part_root_not_unit.stderr
error: ComponentPart requires the first variant to be a unit variant
 --> tests/ui/component_part_root_not_unit.rs:6:5
  |
6 |     Root(String),
  |     ^^^^^^^^^^^^
