crates/ars-core/tests/ui/component_part_root_not_unit.rs
use ars_core::ComponentPart;

#[derive(ComponentPart)]
#[scope = "dialog"]
enum Part {
    Root(String),
    Trigger,
}

fn main() {}
